--- a/scss/components/_blockContact.scss
+++ b/scss/components/_blockContact.scss
@@ -11,6 +11,7 @@
 .row_contact{
 	margin-left: 10px;
 	margin-bottom: 10px;
+	margin-right: 0;
 }
 
 // .form_section{
