--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -38,6 +38,7 @@
   align-items:center;
   position:relative;
   flex-wrap: wrap;
+	    margin-right: 0;
 }
 /*boton más información*/
 .btn--info, .btn--yellow {
