--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,4 +1,4 @@
-.form-section, .contactData_section{
+.form-section{
 	margin-top:10px;
 }
 
@@ -8,7 +8,7 @@
   @media all and (max-width:872px) {
     font-size: 0.8rem;
   }
- 
+
 }
 
 .form-control:focus	 {
